# mminions

./: .gitignore  AGENTS.md  README.md  mminions.toml  pyproject.toml  pytest.ini
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: FlowGraph.tsx  HealthDot.tsx  LaunchForm.tsx  PaneViewer.tsx  RunList.tsx  SummaryBar.tsx  Tabs.tsx  TimelineView.tsx  WorkerCard.tsx
dashboard/src/hooks/: useFlowGraph.ts  useTimeline.ts
dashboard/src/lib/: api.ts  status.ts  types.ts
dashboard/src/pages/: RunDetail.tsx
docs/: codex.md  llm-assisted-delta-debugging.md  responsibilities.md
mminions/: __init__.py  cli.py  command.py  config.py  issue.py  manager.py  tmux.py  types.py  workers.py
orchestrator/: __init__.py  artifacts.py  cli.py  command.py  config.py  eval_numpy_convolve.py  issue.py  manager.py  preflight.py  repro.py  run.py  server.py  sessions.py  supervision_loop.py  tmux_supervisor.py  triage.py  types.py  workers.py  worktree.py
orchestrator/evals/: __init__.py  numpy_convolve.py
skills/execplan/: SKILL.md
skills/execplan-bugfix/: SKILL.md
skills/execplan-execute/: SKILL.md
skills/execplan-generate/: SKILL.md
skills/repro-ddmin/: SKILL.md
skills/triage-evidence/: SKILL.md
tests/: test_artifacts.py  test_config.py  test_core.py  test_issue.py  test_manager.py  test_repro.py  test_run.py  test_server.py  test_triage.py  test_workers.py
tests/evals/: test_numpy_convolve_live.py  test_numpy_convolve_offline.py
(+5 files in other folders)
