[project]
name = "mminions"
version = "0.1.0"
description = "tmux session deployment for CLI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mminions = "mminions.cli:main"
mminions-run = "mminions.manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mminions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
